--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_core_desktop: ^0.1.1-dev.3
   flutter_dotenv: ^5.0.2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
