--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   flutter_markdown: ^0.6.9+1
+  flutter_highlight: ^0.7.0
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
