--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_markdown: ^0.6.9+1
   flutter_highlight: ^0.7.0
   google_fonts: ^2.3.1
+  firebase_auth: ^3.3.14
 
 dev_dependencies:
   flutter_test:
