--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_highlight: ^0.7.0
   google_fonts: ^2.3.1
   firebase_auth: ^3.3.14
+  url_launcher: ^6.1.0
 
 dev_dependencies:
   flutter_test:
