--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^2.3.1
   firebase_auth: ^3.3.14
   url_launcher: ^6.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
