--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   firebase_auth: ^3.3.14
   url_launcher: ^6.1.0
   intl: ^0.17.0
+  file_picker: ^3.0.4
+  firebase_storage: ^10.2.17
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
