--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   file_picker: ^3.0.4
   firebase_storage: ^10.2.17
   uuid: ^3.0.6
+  go_router: ^3.1.1
 
 dev_dependencies:
   flutter_test:
