--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_storage: ^10.2.17
   uuid: ^3.0.6
   go_router: ^3.1.1
+  animations: ^2.0.4
 
 dev_dependencies:
   flutter_test:
