fix warnings part2 & remove windows support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["cyclomatic", "flutterfire", "mymemo"]
+  "cSpell.words": [
+    "Cupertino",
+    "cyclomatic",
+    "dotenv",
+    "firestore",
+    "flutterfire",
+    "mymemo",
+    "roboto"
+  ]
 }
