--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,22 +35,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^3.1.10
-  firebase_core: ^1.13.1
-  firebase_core_desktop: ^0.1.1-dev.3
+  cloud_firestore: ^4.3.1
+  firebase_core: ^2.4.1
+  firebase_core_desktop: ^1.0.2
   flutter_dotenv: ^5.0.2
   http: ^0.13.4
   provider: ^6.0.2
-  flutter_markdown: ^0.6.9+1
+  flutter_markdown: ^0.6.13
   flutter_highlight: ^0.7.0
-  google_fonts: ^2.3.1
-  firebase_auth: ^3.3.14
+  google_fonts: ^3.0.1
+  firebase_auth: ^4.2.4
   url_launcher: ^6.1.0
   intl: ^0.17.0
-  file_picker: ^3.0.4
-  firebase_storage: ^10.2.17
+  file_picker: ^5.2.4
+  firebase_storage: ^11.0.10
   uuid: ^3.0.6
-  go_router: ^3.1.1
+  go_router: ^6.0.0
   animations: ^2.0.4
   lottie: ^2.0.0
 
@@ -63,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   dart_code_metrics: ^5.0.1
 
 # For information on the generic Dart part of this file, see the
