--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   go_router: ^6.0.0
   animations: ^2.0.4
   lottie: ^2.0.0
+  hooks_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
