--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   animations: ^2.0.4
   lottie: ^2.0.0
   hooks_riverpod: ^2.1.3
+  desktop_drop: ^0.4.1
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
