--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -45,7 +45,7 @@ linter:
 
 dart_code_metrics:
   anti-patterns:
-    - long-method
+    # - long-method
     - long-parameter-list
   metrics:
     cyclomatic-complexity: 20
