--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,14 @@
     "flutterfire",
     "mymemo",
     "roboto"
-  ]
+  ],
+  "dart.flutterSdkPath": "~/.asdf/installs/flutter/3.19.2-stable",
+  "[dart]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll": "explicit",
+      "source.organizeImports": "explicit"
+    },
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true
+  }
 }
